# docs/swagger.json
@@ -55,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -87,7 +87,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -119,7 +119,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -158,7 +158,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -188,7 +188,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -220,7 +220,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -257,7 +257,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -289,7 +289,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -321,7 +321,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -360,7 +360,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -390,7 +390,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -427,7 +427,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -459,7 +459,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -491,7 +491,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -530,7 +530,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -560,7 +560,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appresponse.Response-any"
+                            "$ref": "#/definitions/dto.Response-any"
                         }
                     }
                 }
@@ -576,58 +576,6 @@
                 },
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "appresponse.Meta": {
-            "type": "object",
-            "properties": {
-                "paginate": {
-                    "$ref": "#/definitions/appresponse.Paginate"
-                },
-                "timestamp": {
-                    "type": "string"
-                }
-            }
-        },
-        "appresponse.Paginate": {
-            "type": "object",
-            "properties": {
-                "limit": {
-                    "type": "integer"
-                },
-                "next": {
-                    "type": "string"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "prev": {
-                    "type": "string"
-                },
-                "total_pages": {
-                    "type": "integer"
-                },
-                "total_rows": {
-                    "type": "integer"
-                }
-            }
-        },
-        "appresponse.Response-any": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "error": {
-                    "$ref": "#/definitions/apperror.AppError"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "meta": {
-                    "$ref": "#/definitions/appresponse.Meta"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
@@ -724,6 +672,58 @@
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 1
+                }
+            }
+        },
+        "dto.Meta": {
+            "type": "object",
+            "properties": {
+                "paginate": {
+                    "$ref": "#/definitions/dto.Paginate"
+                },
+                "timestamp": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.Paginate": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "next": {
+                    "type": "string"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "prev": {
+                    "type": "string"
+                },
+                "total_pages": {
+                    "type": "integer"
+                },
+                "total_rows": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.Response-any": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "$ref": "#/definitions/apperror.AppError"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "meta": {
+                    "$ref": "#/definitions/dto.Meta"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
